kustomize/zta/auth-chainer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth-chainer
  name: auth-chainer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-chainer
  template:
    metadata:
      labels:
        app: auth-chainer
    spec:
      containers:
      - name: container
        image: dlouvier/auth-chainer:0.4
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth-chainer
  name: auth-chainer
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: auth-chainer
